--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -5,32 +5,30 @@
   font-family: Arial, sans-serif;
 }
 .body {
-  /* background-color: #f2f2f2; */
   background-image: url(../images/background.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 .container {
   margin: 0 auto;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   margin-top: 20px;
-  padding: 20px;
-  width: 500px;
+  width: 80%; /* Adjust the width as needed */
   text-align: center;
 }
+
 .container2 {
   margin: 0 auto;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   margin-top: 20px;
-  padding: 20px;
 }
-.display{
+.display {
   display: table-row-group !important;
-
 }
 #loginForm input,
 #loginForm button {
@@ -51,15 +49,19 @@
 table {
   width: 100%;
   border-collapse: collapse;
+  margin-top: 20px;
 }
-th,
-td {
+th, td {
+  padding: 12px;
   text-align: left;
-  padding: 8px;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #dee2e6;
 }
 th {
-  background-color: #f2f2f2;
+  background-color: #343a40;
+  color: white;
+}
+tbody tr:hover {
+  background-color: #e9ecef;
 }
 tbody tr:nth-child(even) {
   background-color: #f2f2f2;
@@ -77,7 +79,7 @@ td:nth-child(1) {
   }
   
   td:nth-child(4) {
-    width: 20%;
+    width: 15%;
   }
   
   td:nth-child(5) {
